// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force ArrayBuffer | ArrayBuffer 1`] = `
{
  "error": "PENDING",
  "inputs": [
    ArrayBuffer [],
    ArrayBuffer [],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force DataView | DataView 1`] = `
{
  "error": "PENDING",
  "inputs": [
    DataView [],
    DataView [],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force GeneratorFunction | GeneratorFunction 1`] = `
{
  "error": "PENDING",
  "inputs": [
    [Function],
    [Function],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force Int16Array | Int16Array 1`] = `
{
  "error": "PENDING",
  "inputs": [
    Int16Array [
      0,
      0,
    ],
    Int16Array [
      0,
      0,
    ],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force Map | Map 1`] = `
{
  "error": "PENDING",
  "inputs": [
    Map {
      "foo" => "bar",
    },
    Map {
      "foo" => "bar",
    },
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force Symbol | Symbol 1`] = `
{
  "error": "PENDING",
  "inputs": [
    Symbol(foo),
    Symbol(foo),
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force WeakMap | WeakMap 1`] = `
{
  "error": "PENDING",
  "inputs": [
    WeakMap {},
    WeakMap {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;

exports[`brute force WeakSet | WeakSet 1`] = `
{
  "error": "PENDING",
  "inputs": [
    WeakSet {},
    WeakSet {},
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": true,
  "result": false,
}
`;
